[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = ""
authors = ["yourname <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pygount = "^1.4.0"
taskipy = "^1.10.3"
pydantic = "^1.10.2"
mypy-extensions = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120


[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.idea
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | templates
  )/
  | foo.py
)
'''
extend-exclude = '''
(
  ^/src/.../file.py$
)
'''
[tool.taskipy.tasks]
pc = { cmd = "pre-commit run --all-files", help = "runs precommit on all files" }
test = { cmd = "pytest", help = "runs all tests" }
test-cov = { cmd = "pytest --cov", help = "runs all tests with coverage" }
test-cov-html = { cmd = "pytest --cov --cov-report html:coverage", help = "runs all tests with coverage and outputs a report found in ./coverage/index.html" }
loc = { cmd = "poetry run pygount ./src --format=summary --suffix=py", help = "Count LOC for the project" }
